src/objects/Shipments_SF__c.object
<CustomObject>
    <description>Local table of Shipments... basically a re-creation of the Shipments objects, but since that object is managed and viewable only by licensed users, this new object replicates that data, to be viewed by all... NO LONGER USED, since we have purchased &quot;read-only&quot; licenses from Zenkraft</description>
    <fields>
        <fullName>Actual_Delivery_Date__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>Shipment_LocalSFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shipment_LocalSFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Name__c</fullName>
        <externalId>true</externalId>
        <label>Shipment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Shipments_SF</label>
    <nameField>
        <label>Shipments_SF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments_SFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>